# Gen_LLM_coordination

./: LICENSE  README.md  main.py  notes.md  pyproject.toml
.github/workflows/: ci.yml
experiments/: test.ipynb
experiments/runs/exp_1_ring_line_rewards/20251226-130407/: metrics.json  trajectory.jsonl
experiments/runs/exp_1_ring_line_rewards/20251226-141721/: config.json  trajectory.jsonl
experiments/runs/exp_1_ring_line_rewards/20251226-143012/: config.json  metrics.json  trajectory.jsonl
experiments/runs/exp_1_ring_line_rewards/20251226-145130/: config.json  metrics.json  trajectory.jsonl
experiments/runs/exp_1_ring_line_rewards/20251226-150754/: config.json  metrics.json  trajectory.jsonl
experiments/runs/exp_1_ring_line_rewards/20251226-151036/: config.json  metrics.json  trajectory.jsonl
experiments/runs/exp_1_ring_line_rewards/20251226-151159/: config.json  metrics.json  trajectory.jsonl
